--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'PlayfairDisplayBold';
-    src: url('../nocturne.github.io/fonts/PlayfairDisplay-Bold.ttf') format('truetype');
+    src: url('./fonts/PlayfairDisplay-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: bold;
 }
 
 @font-face {
-    font-family: "JetBrainsMono";
-    src: url('../nocturne.github.io/fonts/JetBrainsMono.ttf') format('truetype');
+    font-family: 'JetBrainsMono';
+    src: url('./fonts/JetBrainsMono.ttf') format('truetype');
 }
 
 .markdown-section {
@@ -20,7 +20,7 @@
 }
 
 body {
-    font-family: "JetBrainsMono";
+    font-family: 'JetBrainsMono';
     font-size: 14px;
     font-style: normal;
     font-variant: normal;
